Update toolbar skin

--- a/less/bb-ui-login.less
+++ b/less/bb-ui-login.less
@@ -7,6 +7,13 @@
     #bb5-ui .bb5-ui-reset;
   }
 
+  .btn {
+    #bb5-ui .btn;
+  }
+  .btn-default-grey {
+    #bb5-ui .btn-default-grey;
+  }
+
   .help-block {
     #bb5-ui .help-block;
   }
