--- a/src/tb/apps/contribution/templates/index.twig
+++ b/src/tb/apps/contribution/templates/index.twig
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-bb5-15">
+    <div class="col-bb5-15 bb5-border-right bb5-border-strong">
         <p>
             <button id="bundle-toolbar-tree" class="btn btn-simple btn-xs">
                 <i class="fa fa-sitemap"></i> {{ trans('tree') }}
