--- a/src/tb/apps/page/templates/toolbar.twig
+++ b/src/tb/apps/page/templates/toolbar.twig
@@ -6,27 +6,29 @@
             </button>
         </p>
     </div>
-    <form class="col-bb5-80" id="bb-toolbar-page-search-form">
+    <form class="col-bb5-70" id="bb-toolbar-page-search-form">
         <p>
             <strong>{{ 'page_filters'|trans }}</strong>
         </p>
 
         <p class="row form-group">
-            <span class="col-bb5-10"><label for="bb-page-title">{{ 'title'|trans }}</label></span>
-            <span class="col-bb5-30">
+            <span class="col-bb5-15"><label for="bb-page-title">{{ 'title'|trans }}</label></span>
+            <span class="col-bb5-35">
                 <input type="text" class="form-control input-xs" id="bb-page-title" name="title">
             </span>
-            <span class="col-bb5-10"><label for="bb-page-layout">{{ 'layout'|trans }}</label></span>
-            <span class="col-bb5-30">
-                <select class="form-control input-xs" id="bb-page-layout" name="layout">
-                    <option value="all">{{ 'all_layouts'|trans }}</option>
-                    {% for layout in layouts %}
-                        <option value="{{ layout.uid }}">{{ layout.label }}</option>
-                    {% endfor %}
-                </select>
+            <span class="col-bb5-15"><label for="bb-page-layout">{{ 'layout'|trans }}</label></span>
+            <span class="col-bb5-35">
+                <span class="select select-block">
+                    <select class="form-control input-xs" id="bb-page-layout" name="layout">
+                        <option value="all">{{ 'all_layouts'|trans }}</option>
+                        {% for layout in layouts %}
+                            <option value="{{ layout.uid }}">{{ layout.label }}</option>
+                        {% endfor %}
+                    </select>
+                </span>
             </span>
         </p>
-        <p class="form-group">
+        <p class="form-group text-right">
             <button type="reset" id="bb-toolbar-page-reset-search-form" class="btn btn-default-grey btn-xs">{{ 'reset'|trans }}</button>
             <button type="submit" class="btn btn-default-grey btn-xs"><i class="fa fa-search"></i>{{ 'search'|trans }}</button>
         </p>
