--- a/src/tb/component/formbuilder/form/element/templates/nodeSelector.twig
+++ b/src/tb/component/formbuilder/form/element/templates/nodeSelector.twig
@@ -1,5 +1,6 @@
 <label class="label">{{ element.getLabel() }}</label>
-<button type="button" class="add_node" class="btn btn-default-grey btn-sm"><i class="fa fa-plus"></i> {{ trans('select') }}</button>
+
+<button type="button" class="btn btn-default-grey btn-sm add_node" class="btn btn-default-grey btn-sm"><i class="fa fa-plus"></i> {{ trans('select') }}</button>
 <div class="node_elements_wrapper">
     <ul class="nodeselector_list list-unstyled" style="margin-top:10px;">
         {% for item in items %}
