--- a/src/tb/component/linkselector/templates/layout.twig
+++ b/src/tb/component/linkselector/templates/layout.twig
@@ -33,7 +33,7 @@
                             <p class="pull-right">
                                 <button type="button" data-viewmode="grid" class="btn viewmode-btn btn-simple btn-sm bb5-sortasgrid fa fa-th-large"></button>
                                 <button type="button" data-viewmode="list" class="btn viewmode-btn btn-simple btn-sm bb5-sortaslist fa fa-list-ul"></button>
-                                <select class="max-per-page-selector input-xs"></select>
+                                <span class="select"><select class="max-per-page-selector"></select></span>
                             </p>
                         </div>
                     </div>
