--- a/src/tb/apps/bundle/templates/index.twig
+++ b/src/tb/apps/bundle/templates/index.twig
@@ -1,34 +1,37 @@
 <div class="row">
-    <div class="col-bb5-30 bb5-border-right">
+    <div class="col-bb5-25 bb5-border-right align-middle">
+        <p class="text-center">
+            <button class="btn btn-default-grey btn-sm btn-toggle btn-dialog-extension">
+                <i class="fa fa-angle-down"></i>{{ 'see_my_extensions'|trans }}
+            </button>
+        </p>
+    </div>
+    <div class="col-bb5-25">
         <div class="bb5-extension-pane">
             <div class="row">
-                <div class="col-bb5-40">
+
+                <div class="col-bb5-50">
                     <figure class="bb5-extension-img"><img style="width:75px;" src="{{ bundle.thumbnail }}" alt=""></figure>
                 </div>
-                <div class="col-bb5-60">
+                <div class="col-bb5-50">
                     <p><strong>{{ bundle.name }}</strong></p>
                     <div class="hidden form-group btn-group btn-group-justified activation-btn-group" data-bundle-id="{{ bundle.id }}">
-                        <a class="btn btn-xs btn-default enable {% if bundle.enable %}active{% endif %}" role="button">{{ 'activate'|trans }}</a>
-                        <a class="btn btn-xs btn-default disable {% if bundle.enable == false %}active{% endif %}" role="button">{{ 'deactivate'|trans }}</a>
+                        <a class="btn btn-default-grey btn-sm enable {% if bundle.enable %}active{% endif %}" role="button">{{ 'activate'|trans }}</a>
+                        <a class="btn btn-default-grey btn-sm disable {% if bundle.enable == false %}active{% endif %}" role="button">{{ 'deactivate'|trans }}</a>
                     </div>
                     {% if bundle.admin_entry_point%}
                         <div class="">
-                        <a class="btn btn-primary btn-xs btn-bundle-admin" href="#/bundle/admin/{{ bundle.id }}">
-                            {{ 'manage'|trans }}
+                        <a class="btn btn-default-grey btn-sm btn-bundle-admin" href="#/bundle/admin/{{ bundle.id }}">
+                            <i class="fa fa-cog"></i> {{ 'manage'|trans }}
                         </a>
                         </div>
                     {% endif %}
-                    <p class="position-bottom">
-                        <a class="btn btn-transparent btn-xs btn-toggle btn-dialog-extension" href="javascript:;">
-                            <i class="fa fa-angle-down"></i>{{ 'see_my_extensions'|trans }}
-                        </a>
-                    </p>
                 </div>
             </div>
         </div>
     </div><!--/ End col-->
 
-    <div class="col-bb5-70 bb5-border-right">
+    <div class="col-bb5-50">
         <div class="tab-pane  bb5-content-txt">
             <div class="bb5-scroll-overflow">
                 <p>{{ bundle.description }}</p>
