--- a/src/tb/apps/content/templates/breadcrumb.twig
+++ b/src/tb/apps/content/templates/breadcrumb.twig
@@ -2,7 +2,7 @@
     {% for element in elements %}
         <li {% if loop.last %}class="selected"{% endif %}><a class="breadcrumb-item" href="#" data-bb-content-id="{{ element.id }}">{{ element.name }}</a></li>
         {% if loop.last == false %}
-            <li><i class="fa fa-arrow-right"></i></li>
+            <li><i class="fa fa-angle-right"></i></li>
         {% endif %}
     {% endfor %}
 </ul>
