--- a/src/tb/apps/user/templates/toolbar.twig
+++ b/src/tb/apps/user/templates/toolbar.twig
@@ -12,31 +12,35 @@
         </p>
 
         <p class="row form-group">
-            <span class="col-bb5-10"><label for="bb-user-name">{{ 'name'|trans }}</label></span>
-            <span class="col-bb5-30">
+            <span class="col-bb5-15"><label for="bb-user-name">{{ 'name'|trans }}</label></span>
+            <span class="col-bb5-35">
                 <input type="text" class="form-control input-xs" id="bb-user-name" name="name">
             </span>
-            <span class="col-bb5-10"><label for="bb-user-login">{{ 'login'|trans }}</label></span>
-            <span class="col-bb5-30">
+            <span class="col-bb5-15"><label for="bb-user-login">{{ 'login'|trans }}</label></span>
+            <span class="col-bb5-35">
                 <input type="text" id="bb-user-login" class="form-control input-xs" name="login">
             </span>
         </p>
         <p class="row form-group">
-            <span class="col-bb5-10">
+            <span class="col-bb5-15">
                 <label for="bb-user-status">{{ 'status'|trans }}</label>
             </span>
-            <span class="col-bb5-30">
-                <select class="form-control input-xs" id="bb-user-status" name="activated">
-                    <option value="all">{{ 'all'|trans }}</option>
-                    <option value="1">{{ 'active'|trans }}</option>
-                    <option value="0">{{ 'inactive'|trans }}</option>
-                </select>
+            <span class="col-bb5-35">
+                <span class="select">
+                    <select class="form-control input-xs" id="bb-user-status" name="activated">
+                        <option value="all">{{ 'all'|trans }}</option>
+                        <option value="1">{{ 'active'|trans }}</option>
+                        <option value="0">{{ 'inactive'|trans }}</option>
+                    </select>
+                </span>
             </span>
-            <span class="col-bb5-10"><label for="bb-user-email">{{ 'email'|trans }}</label></span>
-            <span class="col-bb5-30">
+            <span class="col-bb5-15"><label for="bb-user-email">{{ 'email'|trans }}</label></span>
+            <span class="col-bb5-35">
                 <input type="text" id="bb-user-email" class="form-control input-xs" name="email">
             </span>
-            <span class="col-bb5-20">
+        </p>
+        <p class="row form-group text-right">
+            <span class="col-bb5-100">
                 <button type="reset" id="bb-toolbar-user-reset-search-form" class="btn btn-default-grey btn-xs">{{ 'reset'|trans }}</button>
                 <button type="submit" class="btn btn-default-grey btn-xs"><i class="fa fa-search"></i>{{ 'search'|trans }}</button>
             </span>
