--- a/src/tb/component/formbuilder/form/templates/form.twig
+++ b/src/tb/component/formbuilder/form/templates/form.twig
@@ -23,5 +23,5 @@
             {% endif %}
         {% endfor %}
     {% endfor %}
-    <button type="submit" class="btn btn-default bb-submit-form">{{ form.getSubmitLabel() }}</button>
+    <button type="submit" class="btn btn-default-grey btn-sm bb-submit-form">{{ form.getSubmitLabel() }}</button>
 </form>
