[MEDIA] Image croping

--- a/less/bb-forms.less
+++ b/less/bb-forms.less
@@ -25,15 +25,14 @@ textarea {
 }
 
 
-.tab-pane {
-    .radio-inline, .checkbox-inline {
-        padding-left: 15px;
-        input[type=radio],
-        input[type=checkbox] {
-            margin-top:1px;
-            margin-left:-15px;
-        }
+.radio-inline, .checkbox-inline {
+    padding-left: 15px!important;
+    input[type=radio],
+    input[type=checkbox] {
+        margin-top:1px;
+        margin-left:-15px;
     }
+
 }
 
 .search-bar {
